--- a/share.html
+++ b/share.html
@@ -18,146 +18,91 @@
             "contents": [
               {
                 "type": "bubble",
-                "hero": {
-                  "type": "image",
-                  "size": "full",
-                  "aspectRatio": "20:13",
-                  "aspectMode": "cover",
-                  "url": "https://i.postimg.cc/R0zk5gN5/e-rou-gong-wan.jpg"
-                },
+                "hero": { "type": "image", "size": "full", "aspectRatio": "20:13", "aspectMode": "cover", "url": "https://i.postimg.cc/R0zk5gN5/e-rou-gong-wan.jpg" },
                 "body": {
-                  "type": "box",
-                  "layout": "vertical",
+                  "type": "box", "layout": "vertical",
                   "contents": [
                     { "type": "text", "text": "下營農會鵝肉貢丸", "weight": "bold", "size": "xl", "wrap": true },
                     { "type": "text", "text": "特價：170元/包", "size": "sm", "wrap": true }
                   ]
                 },
                 "footer": {
-                  "type": "box",
-                  "layout": "vertical",
+                  "type": "box", "layout": "vertical", "spacing": "sm",
                   "contents": [
-                    {
-                      "type": "button",
-                      "style": "primary",
-                      "action": { "type": "uri", "label": "購買連結", "uri": "https://tsc.ksi.com.tw/FC/r3SRi" }
-                    }
+                    { "type": "button", "style": "primary", "action": { "type": "uri", "label": "購買連結", "uri": "https://tsc.ksi.com.tw/FC/r3SRi" } },
+                    { "type": "button", "style": "primary", "color": "#FFA733", "action": { "type": "uri", "label": "分享給好友", "uri": "https://liff.line.me/2008383604-Rk14OXra" } }
                   ]
                 }
               },
               {
                 "type": "bubble",
-                "hero": {
-                  "type": "image",
-                  "size": "full",
-                  "aspectRatio": "20:13",
-                  "aspectMode": "cover",
-                  "url": "https://i.postimg.cc/yNXwV0Zz/ban-ji-qie-kuai.jpg"
-                },
+                "hero": { "type": "image", "size": "full", "aspectRatio": "20:13", "aspectMode": "cover", "url": "https://i.postimg.cc/yNXwV0Zz/ban-ji-qie-kuai.jpg" },
                 "body": {
-                  "type": "box",
-                  "layout": "vertical",
+                  "type": "box", "layout": "vertical",
                   "contents": [
                     { "type": "text", "text": "童仔雞半雞切塊", "weight": "bold", "size": "xl", "wrap": true },
                     { "type": "text", "text": "特價：225元/包", "size": "sm", "wrap": true }
                   ]
                 },
                 "footer": {
-                  "type": "box",
-                  "layout": "vertical",
+                  "type": "box", "layout": "vertical", "spacing": "sm",
                   "contents": [
-                    {
-                      "type": "button",
-                      "style": "primary",
-                      "action": { "type": "uri", "label": "購買連結", "uri": "https://tsc.ksi.com.tw/FC/m2HTg" }
-                    }
+                    { "type": "button", "style": "primary", "action": { "type": "uri", "label": "購買連結", "uri": "https://tsc.ksi.com.tw/FC/m2HTg" } },
+                    { "type": "button", "style": "primary", "color": "#FFA733", "action": { "type": "uri", "label": "分享給好友", "uri": "https://liff.line.me/2008383604-Rk14OXra" } }
                   ]
                 }
               },
               {
                 "type": "bubble",
-                "hero": {
-                  "type": "image",
-                  "size": "full",
-                  "aspectRatio": "20:13",
-                  "aspectMode": "cover",
-                  "url": "https://i.postimg.cc/8CV2QZsR/3.jpg"
-                },
+                "hero": { "type": "image", "size": "full", "aspectRatio": "20:13", "aspectMode": "cover", "url": "https://i.postimg.cc/8CV2QZsR/3.jpg" },
                 "body": {
-                  "type": "box",
-                  "layout": "vertical",
+                  "type": "box", "layout": "vertical",
                   "contents": [
                     { "type": "text", "text": "禾乃川酸白菜", "weight": "bold", "size": "xl", "wrap": true },
                     { "type": "text", "text": "特價：252元/盒", "size": "sm", "wrap": true }
                   ]
                 },
                 "footer": {
-                  "type": "box",
-                  "layout": "vertical",
+                  "type": "box", "layout": "vertical", "spacing": "sm",
                   "contents": [
-                    {
-                      "type": "button",
-                      "style": "primary",
-                      "action": { "type": "uri", "label": "購買連結", "uri": "https://tsc.ksi.com.tw/FC/n6B7G" }
-                    }
+                    { "type": "button", "style": "primary", "action": { "type": "uri", "label": "購買連結", "uri": "https://tsc.ksi.com.tw/FC/n6B7G" } },
+                    { "type": "button", "style": "primary", "color": "#FFA733", "action": { "type": "uri", "label": "分享給好友", "uri": "https://liff.line.me/2008383604-Rk14OXra" } }
                   ]
                 }
               },
               {
                 "type": "bubble",
-                "hero": {
-                  "type": "image",
-                  "size": "full",
-                  "aspectRatio": "20:13",
-                  "aspectMode": "cover",
-                  "url": "https://i.postimg.cc/1zcL9Dq1/te-da-wei-sheng-xian-bai-xia.jpg"
-                },
+                "hero": { "type": "image", "size": "full", "aspectRatio": "20:13", "aspectMode": "cover", "url": "https://i.postimg.cc/1zcL9Dq1/te-da-wei-sheng-xian-bai-xia.jpg" },
                 "body": {
-                  "type": "box",
-                  "layout": "vertical",
+                  "type": "box", "layout": "vertical",
                   "contents": [
                     { "type": "text", "text": "蝦覓世界特大尾白蝦", "weight": "bold", "size": "xl", "wrap": true },
                     { "type": "text", "text": "特價：470元/2包", "size": "sm", "wrap": true }
                   ]
                 },
                 "footer": {
-                  "type": "box",
-                  "layout": "vertical",
+                  "type": "box", "layout": "vertical", "spacing": "sm",
                   "contents": [
-                    {
-                      "type": "button",
-                      "style": "primary",
-                      "action": { "type": "uri", "label": "購買連結", "uri": "https://tsc.ksi.com.tw/FC/Gc9e7" }
-                    }
+                    { "type": "button", "style": "primary", "action": { "type": "uri", "label": "購買連結", "uri": "https://tsc.ksi.com.tw/FC/Gc9e7" } },
+                    { "type": "button", "style": "primary", "color": "#FFA733", "action": { "type": "uri", "label": "分享給好友", "uri": "https://liff.line.me/2008383604-Rk14OXra" } }
                   ]
                 }
               },
               {
                 "type": "bubble",
-                "hero": {
-                  "type": "image",
-                  "size": "full",
-                  "aspectRatio": "20:13",
-                  "aspectMode": "cover",
-                  "url": "https://i.postimg.cc/LsMcKxnm/ri-ben-he-ge-shan-guo-zhi.jpg"
-                },
+                "hero": { "type": "image", "size": "full", "aspectRatio": "20:13", "aspectMode": "cover", "url": "https://i.postimg.cc/LsMcKxnm/ri-ben-he-ge-shan-guo-zhi.jpg" },
                 "body": {
-                  "type": "box",
-                  "layout": "vertical",
+                  "type": "box", "layout": "vertical",
                   "contents": [
                     { "type": "text", "text": "和歌山100%蜜柑果汁", "weight": "bold", "size": "xl", "wrap": true },
                     { "type": "text", "text": "特價：295元/瓶", "size": "sm", "wrap": true }
                   ]
                 },
                 "footer": {
-                  "type": "box",
-                  "layout": "vertical",
+                  "type": "box", "layout": "vertical", "spacing": "sm",
                   "contents": [
-                    {
-                      "type": "button",
-                      "style": "primary",
-                      "action": { "type": "uri", "label": "購買連結", "uri": "https://tsc.ksi.com.tw/FC/i3H8B" }
-                    }
+                    { "type": "button", "style": "primary", "action": { "type": "uri", "label": "購買連結", "uri": "https://tsc.ksi.com.tw/FC/i3H8B" } },
+                    { "type": "button", "style": "primary", "color": "#FFA733", "action": { "type": "uri", "label": "分享給好友", "uri": "https://liff.line.me/2008383604-Rk14OXra" } }
                   ]
                 }
               }
@@ -174,6 +119,7 @@
 </script>
 </body>
 </html>
+
 
 
 
