--- a/share.html
+++ b/share.html
@@ -158,7 +158,199 @@ async function main() {
                 "type": "box",
                 "layout": "vertical",
                 "spacing": "sm",
-                "cont
+                "contents": [
+                  {
+                    "type": "text",
+                    "text": "禾乃川酸白菜",
+                    "wrap": true,
+                    "weight": "bold",
+                    "size": "xl"
+                  },
+                  {
+                    "type": "box",
+                    "layout": "baseline",
+                    "contents": [
+                      {
+                        "type": "text",
+                        "text": "特價：252元/盒",
+                        "wrap": true,
+                        "weight": "bold",
+                        "size": "xl",
+                        "flex": 0
+                      }
+                    ]
+                  }
+                ]
+              },
+              "footer": {
+                "type": "box",
+                "layout": "vertical",
+                "spacing": "sm",
+                "contents": [
+                  {
+                    "type": "button",
+                    "style": "primary",
+                    "action": {
+                      "type": "uri",
+                      "label": "購買連結",
+                      "uri": "https://tsc.ksi.com.tw/FC/n6B7G"
+                    }
+                  },
+                  {
+                    "type": "button",
+                    "action": {
+                      "type": "uri",
+                      "label": "分享蜜鄰和平店的團購",
+                      "uri": "https://liff.line.me/2008383604-Rk14OXra"
+                    },
+                    "style": "primary",
+                    "color": "#FFA733"
+                  }
+                ]
+              }
+            },
+            {
+              "type": "bubble",
+              "hero": {
+                "type": "image",
+                "size": "full",
+                "aspectRatio": "20:13",
+                "aspectMode": "cover",
+                "url": "https://i.postimg.cc/1zcL9Dq1/te-da-wei-sheng-xian-bai-xia.jpg"
+              },
+              "body": {
+                "type": "box",
+                "layout": "vertical",
+                "spacing": "sm",
+                "contents": [
+                  {
+                    "type": "text",
+                    "text": "蝦覓世界特大尾白蝦",
+                    "wrap": true,
+                    "weight": "bold",
+                    "size": "xl"
+                  },
+                  {
+                    "type": "box",
+                    "layout": "baseline",
+                    "contents": [
+                      {
+                        "type": "text",
+                        "text": "特價：470元/2包",
+                        "wrap": true,
+                        "weight": "bold",
+                        "size": "xl",
+                        "flex": 0
+                      }
+                    ]
+                  }
+                ]
+              },
+              "footer": {
+                "type": "box",
+                "layout": "vertical",
+                "spacing": "sm",
+                "contents": [
+                  {
+                    "type": "button",
+                    "style": "primary",
+                    "action": {
+                      "type": "uri",
+                      "label": "購買連結",
+                      "uri": "https://tsc.ksi.com.tw/FC/Gc9e7"
+                    }
+                  },
+                  {
+                    "type": "button",
+                    "action": {
+                      "type": "uri",
+                      "label": "分享蜜鄰和平店的團購",
+                      "uri": "https://liff.line.me/2008383604-Rk14OXra"
+                    },
+                    "style": "primary",
+                    "color": "#FFA733"
+                  }
+                ]
+              }
+            },
+            {
+              "type": "bubble",
+              "hero": {
+                "type": "image",
+                "size": "full",
+                "aspectRatio": "20:13",
+                "aspectMode": "cover",
+                "url": "https://i.postimg.cc/LsMcKxnm/ri-ben-he-ge-shan-guo-zhi.jpg"
+              },
+              "body": {
+                "type": "box",
+                "layout": "vertical",
+                "spacing": "sm",
+                "contents": [
+                  {
+                    "type": "text",
+                    "text": "和歌山100%蜜柑果汁",
+                    "wrap": true,
+                    "weight": "bold",
+                    "size": "xl"
+                  },
+                  {
+                    "type": "box",
+                    "layout": "baseline",
+                    "contents": [
+                      {
+                        "type": "text",
+                        "text": "特價：295元/瓶",
+                        "wrap": true,
+                        "weight": "bold",
+                        "size": "xl",
+                        "flex": 0
+                      }
+                    ]
+                  }
+                ]
+              },
+              "footer": {
+                "type": "box",
+                "layout": "vertical",
+                "spacing": "sm",
+                "contents": [
+                  {
+                    "type": "button",
+                    "style": "primary",
+                    "action": {
+                      "type": "uri",
+                      "label": "購買連結",
+                      "uri": "https://tsc.ksi.com.tw/FC/i3H8B"
+                    }
+                  },
+                  {
+                    "type": "button",
+                    "action": {
+                      "type": "uri",
+                      "label": "分享蜜鄰和平店的團購",
+                      "uri": "https://liff.line.me/2008383604-Rk14OXra"
+                    },
+                    "style": "primary",
+                    "color": "#FFA733"
+                  }
+                ]
+              }
+            }
+          ]
+        }
+      }
+    ]);
+  } catch (err) {
+    console.error("分享錯誤：", err);
+  }
+  liff.closeWindow();
+}
+main();
+</script>
+</body>
+</html>
+
 
 
 
